--- a/crystal_client_templates/shard.mustache
+++ b/crystal_client_templates/shard.mustache
@@ -10,7 +10,7 @@ license: {{{shardLicense}}}
 dependencies:
   crest:
     github: mamantoha/crest
-    version: ">= 1.3.5"
+    branch: master
 
 development_dependencies:
   kemal:
