--- a/crystal_client_templates/partial_model_setter.mustache
+++ b/crystal_client_templates/partial_model_setter.mustache
@@ -2,6 +2,11 @@
     # Custom attribute writer method checking allowed values (enum).
     # @param [Object] {{{name}}} Object to be assigned
     def {{{name}}}=({{{name}}} : {{>partial_model_generic_property_data_type}})
+      {{#vendorExtensions}}
+      {{#x-bypass-validation}}
+      @{{{name}}} = {{{name}}}
+      {{/x-bypass-validation}}
+      {{^x-bypass-validation}}
       if {{{name}}}.nil?
       {{#required}}
       {{#isNullable}}
@@ -58,4 +63,6 @@
       {{/allowableValues}}
       {{/isEnum}}
       @{{{name}}} = _{{{name}}}
+      {{/x-bypass-validation}}
+      {{/vendorExtensions}}
     end
