Fix multipart form content type header missing boundary string

--- a/crystal_client_templates/api_client.mustache
+++ b/crystal_client_templates/api_client.mustache
@@ -34,14 +34,17 @@ module {{moduleName}}
     # @return [Hash]
     property default_cookies : Hash(String, String)
 
+    # User Agent
+    getter user_agent : String? = nil
+
     # Initializes the ApiClient
     # @option config [Configuration] Configuration for initializing the object, default to Configuration.default
-    def initialize(@config = Configuration.default, @default_url_encoder = Crest::ZeroEnumeratedFlatParamsEncoder)
-      @user_agent = "{{{httpUserAgent}}}{{^httpUserAgent}}OpenAPI-Generator/#{VERSION}/crystal{{/httpUserAgent}}"
-      @default_headers = {
-        "User-Agent" => @user_agent,
-      }
+    def initialize(
+      @config = Configuration.default,
+      @default_url_encoder = Crest::ZeroEnumeratedFlatParamsEncoder,
+      @default_headers = Hash(String, String).new,
       @default_cookies = Hash(String, String).new
+    )
     end
 
     def self.default : ApiClient
@@ -155,9 +158,9 @@ module {{moduleName}}
 
     # Build form data from form params
     # @param [Array(Tuple(String, Crest::ParamsValue))] form_params
-    def build_form_data(form_params : Array(Tuple(String, Crest::ParamsValue))) : String
+    def build_form_data(form_params : Array(Tuple(String, Crest::ParamsValue)), header_params : Hash(String, String)) : String
       if form_params.any?(&.[1].is_a?(IO))
-        build_multipart_form_data(form_params)
+        build_multipart_form_data(form_params, header_params)
       else
         build_url_encoded_form_data(form_params)
       end
@@ -175,10 +178,12 @@ module {{moduleName}}
 
     # Build multipart form data from form params
     # @param [Array(Tuple(String, Crest::ParamsValue))] form_params
-    def build_multipart_form_data(form_params : Array(Tuple(String, Crest::ParamsValue))) : String
+    def build_multipart_form_data(form_params : Array(Tuple(String, Crest::ParamsValue)), header_params : Hash(String, String)) : String
       io = IO::Memory.new
 
       HTTP::FormData.build(io) do |formdata|
+        header_params["Content-Type"] = formdata.content_type
+
         form_params.each do |name, value|
           if value.is_a?(IO)
             add_io_field_to_form(formdata, name, value.as(IO))
@@ -192,7 +197,7 @@ module {{moduleName}}
     end
 
     private def add_io_field_to_form(formdata : HTTP::FormData::Builder, name : String, io : IO)
-      filename = io.is_a?(File) ? io.as(::File).path : name.to_s
+      filename = io.is_a?(::File) ? io.as(::File).path : name.to_s
       mime = MIME.from_filename(filename, DEFAULT_MIME_TYPE)
       metadata = HTTP::FormData::FileMetadata.new(filename: filename)
       headers = HTTP::Headers{"Content-Type" => mime}
@@ -251,7 +256,7 @@ module {{moduleName}}
         # use JSON string in the payload
         form_or_body = post_body
       elsif !form_params.nil?
-        form_or_body = build_form_data(form_params.not_nil!)
+        form_or_body = build_form_data(form_params.not_nil!, header_params)
       end
 
       Crest::Request.new(
