Fix bugs found in generated pet store client sdk

--- a/crystal_client_templates/partial_model_enum_class.mustache
+++ b/crystal_client_templates/partial_model_enum_class.mustache
@@ -19,7 +19,7 @@
     end
 
     def self.new(pull : JSON::PullParser)
-      new({{dataType}}.new(pull))
+      new({{dataType}}.new(pull), false)
     end
 
     def self.from_json_object_key?(key : String)
