--- a/crystal_client_templates/api_client.mustache
+++ b/crystal_client_templates/api_client.mustache
@@ -99,9 +99,10 @@ module {{moduleName}}
     # Sets user agent in HTTP header
     #
     # @param [String] user_agent User agent (e.g. openapi-generator/ruby/1.0.0)
-    def user_agent=(user_agent : String) : Nil
+    def user_agent=(user_agent : String?) : Nil
+      @default_headers["User-Agent"] = user_agent unless user_agent.nil?
+
       @user_agent = user_agent
-      @default_headers["User-Agent"] = @user_agent
     end
 
     # Return Accept header based on an array of accepts provided.
