API operation should be optional

--- a/crystal_client_templates/api_client.mustache
+++ b/crystal_client_templates/api_client.mustache
@@ -63,7 +63,7 @@ module {{moduleName}}
       (mime == "*/*") || JSON_MIME_REGEX.matches?(mime)
     end
 
-    def build_request_url(path : String, operation : String) : String
+    def build_request_url(path : String, operation : String?) : String
       # Add leading and trailing slashes to path
       path = "/#{path}".gsub(/\/+/, "/")
       @config.base_url(operation) + path
@@ -231,7 +231,7 @@ module {{moduleName}}
     def build_api_request(
       http_method : Symbol,
       path : String,
-      operation : String,
+      operation : String? = nil,
       post_body : IO | String | Nil = nil,
       auth_names : Array(String) = Array(String).new,
       header_params : Hash(String, String) = Hash(String, String).new,
