Require model files

--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -3,6 +3,10 @@
 require "uri"
 require "../api_client"
 
+{{#imports}}
+{{#import}}require "../models/{{.}}" {{/import}}
+{{/imports}}
+
 module {{moduleName}}
 {{#operations}}
   class {{classname}}
