--- a/crystal_client_templates/model.mustache
+++ b/crystal_client_templates/model.mustache
@@ -4,6 +4,10 @@ require "json"
 require "time"
 require "log"
 
+{{#imports}}
+{{#import}}require "./{{.}}" {{/import}}
+{{/imports}}
+
 module {{moduleName}}
 {{#models}}
 {{#model}}
