Require files needed in models and apis

--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -1,7 +1,6 @@
 # {{#lambdaPrefixWithHash}}{{> api_info}}{{/lambdaPrefixWithHash}}
 
-require "uri"
-require "../api_client"
+require "../../core"
 
 {{#imports}}
 {{#import}}require "../models/{{.}}" {{/import}}
