--- a/crystal_client_templates/model.mustache
+++ b/crystal_client_templates/model.mustache
@@ -1,8 +1,6 @@
 # {{#lambdaPrefixWithHash}}{{> api_info}}{{/lambdaPrefixWithHash}}
 
-require "json"
-require "time"
-require "log"
+require "../../core"
 
 {{#imports}}
 {{#import}}require "./{{.}}" {{/import}}
