--- a/crystal_client_templates/configuration.mustache
+++ b/crystal_client_templates/configuration.mustache
@@ -59,7 +59,7 @@ module {{moduleName}}
     # Default to false.
     #
     # @return [true, false]
-    property debugging : Bool
+    property? debugging : Bool
 
     # Defines the temporary folder to store downloaded files
     # (for API endpoints that have file response).
@@ -75,7 +75,7 @@ module {{moduleName}}
     # Set this to false to skip client side validation in the operation.
     # Default to true.
     # @return [true, false]
-    property client_side_validation : Bool
+    property? client_side_validation : Bool
 
     # ## TLS/SSL setting
     # Set this to false to skip verifying SSL certificate when calling API from https server.
@@ -152,7 +152,7 @@ module {{moduleName}}
     #   config.password = "xxx"
     # end
     # ```
-    def initialize
+    def initialize(&)
       initialize
       yield self
     end
@@ -163,7 +163,7 @@ module {{moduleName}}
     end
 
     # Configure object with block.
-    def configure
+    def configure(&)
       yield self
     end
 
@@ -341,7 +341,7 @@ module {{moduleName}}
 
       index = index_string.to_i
       # check array index out of bound
-      if (index < 0 || index >= servers.size)
+      if index < 0 || index >= servers.size
         raise ArgumentError.new("Invalid index #{index} when selecting the server. Must be less than #{servers.size}")
       end
 
@@ -353,7 +353,7 @@ module {{moduleName}}
       # go through variable and assign a value
       server["variables"].each do |name, variable|
         if variables.has_key?(name)
-          if (!variable.has_key?("enum_values") || variable["enum_values"].includes?(variables[name]))
+          if !variable.has_key?("enum_values") || variable["enum_values"].includes?(variables[name])
             url.gsub! "{" + name.to_s + "}", variables[name]
           else
             raise ArgumentError.new("The variable `#{name}` in the server URL has invalid value #{variables[name]}. Must be #{variable["enum_values"]}.")
