--- a/crystal_client_templates/core.mustache
+++ b/crystal_client_templates/core.mustache
@@ -33,7 +33,7 @@ module {{moduleName}}
   #   config.password = "xxx"
   # end
   # ```
-  def self.configure
+  def self.configure(&)
     yield Configuration.default
   end
 end
